<resources>
    <string name="app_name">WeatherApplication</string>
    <string name="current_weather_title">Current Weather</string>
    <string name="settings_title">Settings</string>
    <string name="weather_forecast_report_title">Weather Forecast Report</string>
    <string name="loading">Loading</string>
    <string name="location_hint">Enter the Location</string>
    <string name="get_data">Get Data</string>
    <string name="get_location">Get Current Location</string>
</resources>